# agent-finance-cli

./: Cargo.toml  README.md  README_JA.md  README_KO.md  README_ZH.md  package.json
.github/workflows/: publish-npm.yml
crates/binance/src/: client.rs  exchange_rules.rs  futures_state.rs  lib.rs  metadata.rs  permissions.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  cli.rs  crypto_app.rs  crypto_cli.rs  crypto_evidence.rs  lib.rs  localized_help.rs  output.rs  skills.rs  terminal_app.rs  terminal_cli.rs  terminal_output.rs  terminal_state.rs
crates/cli/tests/: command_surface_cli.rs  trading_cli.rs
crates/core/src/: audit.rs  capabilities.rs  intent.rs  lib.rs  profile.rs  risk.rs  types.rs
crates/i18n/: Cargo.toml
crates/i18n/locales/en-US/: agent-finance.ftl
crates/i18n/locales/ja-JP/: agent-finance.ftl
crates/i18n/locales/ko-KR/: agent-finance.ftl
crates/i18n/locales/zh-CN/: agent-finance.ftl
crates/i18n/src/: catalog.rs  lib.rs  locale.rs  resources.rs  translator.rs
crates/market/: Cargo.toml
crates/market/src/: args.rs  cache.rs  crypto_capabilities.rs  crypto_capability.rs  crypto_market_data.rs  history.rs  http.rs  indicators.rs  lib.rs  model.rs  page_read.rs  price.rs  research_snapshot.rs  service.rs  stream.rs  time.rs  websocket.rs
crates/market/src/crypto_runtime/: evidence.rs  mod.rs  source.rs
crates/market/src/providers/: capabilities.rs  cnbc.rs  coinbase.rs  coingecko.rs  mod.rs  okx.rs  polymarket.rs  robinhood.rs  sec_edgar.rs  stooq.rs  yahoo.rs
crates/market/src/providers/binance/: aggregate.rs  config.rs  mod.rs  quote_history.rs  rest.rs  symbol.rs  tests.rs  types.rs  websocket.rs
crates/market/src/providers/stooq/: catalog.rs
crates/market/src/research/: fetchers.rs  highlights.rs  mod.rs  tests.rs
crates/trading/: Cargo.toml
crates/trading/src/: lib.rs  signed_read.rs  write.rs
crates/tui/: Cargo.toml
crates/tui/src/: account.rs  account_controls.rs  account_holdings.rs  account_load.rs  account_panel_view.rs  action_line_view.rs  app.rs  chart.rs  command.rs  config.rs  confirmation_dialog.rs  dump.rs  floating_input.rs  futures_state_controls.rs  futures_state_ticket.rs  hints.rs  history_chart.rs  i18n.rs  input.rs  intent_review_view.rs  keymap.rs  layout.rs  lib.rs  model.rs  mouse_target.rs  open_order_view.rs  order_ticket.rs  order_ticket_controls.rs  order_ticket_input.rs  pane_status.rs  panel_action_line_view.rs  panel_input.rs  panel_mouse.rs  profile_risk_controls.rs  profile_risk_panel_view.rs  profile_snapshot.rs  provider_health.rs  read_only_panel_view.rs  render.rs  scheduler.rs  (+15 more)
crates/tui/src/app/: pending.rs
crates/tui/src/chart/: series.rs
crates/tui/src/input/: mouse_tests.rs
crates/tui/src/render/: account.rs  chrome.rs  futures_state.rs  history.rs  history_annotations.rs  history_glyphs.rs  intent_review.rs  open_orders.rs  order_ticket.rs  panels.rs  profile_policy.rs  profile_risk.rs  risk_audit.rs  settings.rs  tests.rs  ticket_panel.rs  transfer_ticket.rs  widgets.rs
crates/tui/src/scheduler/: mod.rs  write.rs
crates/tui/src/snapshots/: agent_finance_tui__render__tests__command_palette_140x40.snap  agent_finance_tui__render__tests__history_workbench_120x32.snap  agent_finance_tui__render__tests__history_workbench_cursor_zoom_120x32.snap  agent_finance_tui__render__tests__market_workspace_100x30.snap  agent_finance_tui__render__tests__market_workspace_history_hover_100x30.snap  agent_finance_tui__render__tests__narrow_workspace_48x20.snap  agent_finance_tui__render__tests__overview_workspace_100x30.snap  agent_finance_tui__render__tests__settings_workspace_120x32.snap
crates/tui/src/state/: config_undo.rs  interaction.rs  lifecycle.rs  load.rs  staged_confirmation.rs  tests.rs  workspace.rs
crates/tui/src/state/staged_change/: collection.rs  mod.rs  subject.rs  tests.rs  workflow.rs
npm/: check-package.js  smoke-tui.js
skill-data/core/: SKILL.md
skill-data/core/locales/ja-JP/: SKILL.md
skill-data/core/locales/ja-JP/references/: command-map.md
skill-data/core/locales/ko-KR/: SKILL.md
skill-data/core/locales/ko-KR/references/: command-map.md
skill-data/core/locales/zh-CN/: SKILL.md
skill-data/core/locales/zh-CN/references/: command-map.md
skill-data/core/references/: command-map.md
skill-data/crypto/: SKILL.md
skill-data/crypto/locales/ja-JP/: SKILL.md
skill-data/crypto/locales/ko-KR/: SKILL.md
skill-data/crypto/locales/zh-CN/: SKILL.md
skill-data/history-indicators/: SKILL.md
skill-data/history-indicators/locales/ja-JP/: SKILL.md
skill-data/history-indicators/locales/ko-KR/: SKILL.md
skill-data/history-indicators/locales/zh-CN/: SKILL.md
skill-data/prediction-markets/: SKILL.md
skill-data/prediction-markets/locales/ja-JP/: SKILL.md
skill-data/prediction-markets/locales/ko-KR/: SKILL.md
skill-data/prediction-markets/locales/zh-CN/: SKILL.md
skill-data/price/: SKILL.md
skill-data/price/locales/ja-JP/: SKILL.md
skill-data/price/locales/ko-KR/: SKILL.md
skill-data/price/locales/zh-CN/: SKILL.md
skill-data/profile/: SKILL.md
skill-data/profile/locales/ja-JP/: SKILL.md
skill-data/profile/locales/ko-KR/: SKILL.md
skill-data/profile/locales/zh-CN/: SKILL.md
skill-data/providers/: SKILL.md
skill-data/providers/locales/ja-JP/: SKILL.md
skill-data/providers/locales/ko-KR/: SKILL.md
skill-data/providers/locales/zh-CN/: SKILL.md
skill-data/research-data/: SKILL.md
skill-data/research-data/locales/ja-JP/: SKILL.md
skill-data/research-data/locales/ko-KR/: SKILL.md
skill-data/research-data/locales/zh-CN/: SKILL.md
skill-data/tui/: SKILL.md
skill-data/tui/locales/ja-JP/: SKILL.md
skill-data/tui/locales/ko-KR/: SKILL.md
skill-data/tui/locales/zh-CN/: SKILL.md
skills/agent-finance/: SKILL.md
src/: app.rs  cli.rs  output.rs  skills.rs  terminal_app.rs  terminal_cli.rs  terminal_state.rs  terminal_write.rs
src/providers/: stooq.rs
tests/: binance_live.rs  binance_live_write.rs  market_cli.rs  trading_cli.rs
