[workspace]
members = ["crates/cli", "crates/core", "crates/binance", "crates/market"]
default-members = ["crates/cli"]
resolver = "3"

[workspace.package]
version = "0.3.2"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/M4n5ter/agent-finance"

[workspace.dependencies]
agent-finance-binance = { path = "crates/binance" }
agent-finance-core = { path = "crates/core" }
agent-finance-market = { path = "crates/market" }
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = "0.4.45"
chrono-tz = "0.10.4"
clap = "4.6.1"
csv = "1.4.0"
directories = "6.0.0"
futures-util = "0.3.32"
hex = "0.4.3"
hmac = "0.13.0"
iana-time-zone = "0.1"
polymarket_client_sdk_v2 = "*"
prost = "0.14.4"
rust_decimal = "1.42.1"
rustls = { version = "0.23.40", default-features = false }
scraper = "0.27.0"
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
tokio = "1.52.3"
tokio-tungstenite = "0.29.0"
toml = "1.1.2"
url = "2.5.8"
wreq = { version = "6.0.0-rc.29", default-features = false, features = ["cookies", "deflate", "gzip", "json", "socks", "system-proxy", "tokio-rt", "webpki-roots"] }
wreq-util = "3.0.0-rc.12"
zip = { version = "8.6.0", default-features = false }
