[workspace]
members = [
    "crates/cli",
    "crates/core",
    "crates/i18n",
    "crates/binance",
    "crates/market",
    "crates/trading",
    "crates/tui",
]
default-members = ["crates/cli"]
resolver = "3"

[workspace.package]
version = "0.5.0"
edition = "2024"
license = "MIT OR Apache-2.0"
repository = "https://github.com/M4n5ter/agent-finance"

[workspace.dependencies]
agent-finance-binance = { path = "crates/binance" }
agent-finance-core = { path = "crates/core" }
agent-finance-i18n = { path = "crates/i18n" }
agent-finance-market = { path = "crates/market" }
agent-finance-trading = { path = "crates/trading" }
agent-finance-tui = { path = "crates/tui" }
anyhow = "1.0.102"
base64 = "0.22.1"
chrono = "0.4.45"
chrono-tz = "0.10.4"
clap = "4.6.1"
crossterm = "0.29.0"
csv = "1.4.0"
directories = "6.0.0"
futures-util = "0.3.32"
fluent-bundle = "0.16.0"
hex = "0.4.3"
hmac = "0.13.0"
iana-time-zone = "0.1"
nucleo-matcher = "0.3"
polymarket_client_sdk_v2 = "*"
prost = "0.14.4"
ratatui = { version = "0.30.2", features = ["unstable-rendered-line-info"] }
rust_decimal = "1.42.1"
rustls = { version = "0.23.40", default-features = false }
scraper = "0.27.0"
serde = "1.0.228"
serde_json = "1.0.150"
sha2 = "0.11.0"
sys-locale = "0.3.2"
tokio = "1.52.3"
tokio-tungstenite = "0.29.0"
toml = "1.1.2"
tui-input = "0.15"
unic-langid = "0.9.6"
unicode-width = "0.2"
url = "2.5.8"
wreq = { version = "6.0.0-rc.29", default-features = false, features = ["cookies", "deflate", "gzip", "json", "socks", "system-proxy", "tokio-rt", "webpki-roots"] }
wreq-util = "3.0.0-rc.12"
zip = { version = "8.6.0", default-features = false }
