[package]
name = "agent-finance-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "agent-finance: AI-agent-first market intelligence CLI for evidence-driven financial research."

[[bin]]
name = "agent-finance"
path = "src/main.rs"

[dependencies]
agent-finance-binance.workspace = true
agent-finance-core.workspace = true
agent-finance-i18n.workspace = true
agent-finance-market.workspace = true
agent-finance-trading.workspace = true
agent-finance-tui.workspace = true
anyhow.workspace = true
chrono.workspace = true
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
unicode-width.workspace = true
