[package]
name = "agent-finance-market"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reusable market data services for agent-finance."

[dependencies]
agent-finance-binance.workspace = true
anyhow.workspace = true
base64.workspace = true
chrono.workspace = true
chrono-tz.workspace = true
csv.workspace = true
futures-util.workspace = true
iana-time-zone.workspace = true
polymarket_client_sdk_v2 = { workspace = true, features = ["clob", "gamma", "data"] }
prost.workspace = true
rustls = { workspace = true, features = ["ring", "std", "tls12"] }
scraper.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = { workspace = true, features = ["rustls-tls-webpki-roots"] }
url.workspace = true
wreq.workspace = true
wreq-util.workspace = true
zip = { workspace = true, features = ["deflate"] }
