[package]
name = "agent-finance-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Interactive terminal cockpit for agent-finance public market data."

[dependencies]
agent-finance-market.workspace = true
agent-finance-core.workspace = true
agent-finance-trading.workspace = true
anyhow.workspace = true
crossterm.workspace = true
ratatui.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "time"] }
toml.workspace = true
nucleo-matcher.workspace = true
tui-input.workspace = true

[dev-dependencies]
insta = "1.48"
